# hermes-factory

./: .env.example  .gitignore  COLLABORATION.md  LICENSE  README.md  SDD.md  active.yaml  nodes.py  projects.yaml  routing.py  state.py  workflow.py
sandbox/: README.md  prepare_test_configs.py  pyproject.toml  run_tests.ps1
sandbox/demo_cli/: __init__.py
sandbox/demo_cli/cli/: __init__.py  main.py  parser.py
sandbox/demo_cli/core/: __init__.py  calculator.py  greeting.py
sandbox/demo_cli/exceptions/: __init__.py
sandbox/demo_cli/models/: __init__.py  calculation.py  greeting.py
sandbox/stubs/: pi_stub.py  qodercli_stub.py  qwen_stub.py  vibe_stub.py
sandbox/test-project/: package.json  tsconfig.build.json  tsconfig.json
sandbox/test-project/.harness/: BLOCKERS.md  JOURNAL.md  STAGES.md  STATE.md
sandbox/test-project/tests/: index.test.ts
sandbox/tests/: test_cli.py
